--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>vanilla-todo</title>
 </head>
 <body>
-    <main id="app"></main>
+    <main id="root"></main>
 </body>
-    <script src="./script.js"></script>
+    <script src="./src/main.js" type="module"></script>
 </html>
